--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 Project: json4magma
 Author: Arsen Elkin
 Affiliation: University of Warwick
-Description: json.m provides an implementation of JSON parser in MAGMA.
+Description: json.m provides an implementation of JSON parser in Magma.
+Website: http://www.arsenelkin.com/json/
+Links:  http://json.org
+	http://magma.maths.usyd.edu.au/magma/
 
 The main intrinsic is JSONParse(str::MonStgElt) -> .
 
-Objects are implemented as associative arrays;
-Arrays are are lists;
-null is implemented as an empty enumerated sequence [].
+JSON objects are implemented as Magma's associative arrays; arrays as lists; null is implemented as an empty enumerated sequence [].
